--- a/reverseGeoCoding/src/main/resources/application.properties
+++ b/reverseGeoCoding/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
